# CS_Group_09_Salary_prediction

./: .dockerignore  Dockerfile  README  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
models/: KNN_salary_model.pkl  Linear_Regression_salary_model.pkl  Random_Forest_salary_model.pkl  decision_tree_salary_model copy.pkl  decision_tree_salary_model.pkl  salary_prediction_model.pkl
notebooks/: Decision_Tree.ipynb  Lasso_regression.ipynb  MLGradient_Boosting_(XGBoost)1.ipynb  Model_comparison1.ipynb  Random_forest.ipynb  experiment_01.ipynb  model_comparison  model_comparison.ipynb
notebooks/Hansani_Fc110566/: MLGradient_Boosting_(XGBoost)1.ipynb  XGBoost.pkl  XGBoost_model2.ipynb  model1.pkl  model2.pkl  model3.ipynb  model3.pkl  model4.ipynb  xgb_salary_model.pkl
notebooks/Hiruna_FC111012/: KNN.ipynb  KNN1.ipynb  KNN1.txt  KNN_Model.ipynb  KNN_salary_model.pkl
notebooks/Kavindu_FC110556/: EDA.ipynb  SVR.ipynb
notebooks/Nidhyana_FC110561/: Lasso_regression.ipynb  Lasso_regression.pkl
notebooks/Ravindu_FC110551/: Decision_Tree.ipynb  decision_tree_salary_model.pkl  rf_pipeline_model.pkl
notebooks/Sakith_FC110558/: Linear_regression.ipynb
notebooks/Senuli_FC110567/: EDA.ipynb  Random_Forest_salary_model.pkl  Random_forest.ipynb  Random_forest02.ipynb  Random_forest_02.ipynb  app.py  model_analysis _report.md
src/: app.py  train_models.py
tests/Hansani_Fc110566/: test_model.ipynb  test_predict.ipynb
